--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       # SQLALCHEMY_DATABASE_URI: mysql://root:password@mariadb/test
       SQLALCHEMY_DATABASE_URI: postgresql://postgres:password@postgres/test
       SIMULATE_NETWORK_LATENCY: "true"
+    entrypoint: ["sh"]
+    command:
+      - "-c"
+      - "alembic upgrade head && python uwsgi.py"
     volumes:
       - .:/src
     ports:
@@ -19,9 +23,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: test
+    ports:
+      - 3306:3306
 
   postgres:
     image: postgres:9.6-alpine
     environment:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: test
+    ports:
+      - 5432:5432
