--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
-mysqlclient==2.0.3
+alembic==1.5.4
+uvicorn==0.13.3
 SQLAlchemy==1.3.22
+python-dotenv==0.15.0
 psycopg2-binary==2.8.6
+pydantic==1.7.3
+mysqlclient==2.0.3
+fastapi==0.63.0
+black==20.8b1
