--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,29 @@
 alembic==1.5.4
-uvicorn==0.13.3
-SQLAlchemy==1.3.22
-python-dotenv==0.15.0
+appdirs==1.4.4
+black==20.8b1
+click==7.1.2
+fastapi==0.63.0
+h11==0.12.0
+httptools==0.1.1
+Mako==1.1.4
+MarkupSafe==1.1.1
+mypy-extensions==0.4.3
+mysqlclient==2.0.3
+pathspec==0.8.1
 psycopg2-binary==2.8.6
 pydantic==1.7.3
-mysqlclient==2.0.3
-fastapi==0.63.0
-black==20.8b1
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+python-editor==1.0.4
+PyYAML==5.4.1
+regex==2020.11.13
+six==1.15.0
+SQLAlchemy==1.3.22
+starlette==0.13.6
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+uvicorn==0.13.3
+uvloop==0.15.1
+watchgod==0.6
+websockets==8.1
